--- a/src/app/consulta/styles.module.css
+++ b/src/app/consulta/styles.module.css
@@ -1,7 +1,9 @@
 .container {
   height: 100%;
   width: 100%;
+  max-width: 350px;
   display: flex;
   flex-direction:column;
   align-items: center;
+  padding: var(--md-1);
 }
