--- a/src/app/consulta/styles.module.css
+++ b/src/app/consulta/styles.module.css
@@ -1,9 +1,12 @@
 .container {
   height: 100%;
   width: 100%;
-  max-width: 350px;
+  min-width: 320px;
+  max-width: 1024px;
+  overflow: hidden;
+  position: relative;
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   align-items: center;
-  padding: var(--md-1);
+  gap: var(--md-1);
 }
