--- a/src/app/components/Models/styles.module.css
+++ b/src/app/components/Models/styles.module.css
@@ -16,7 +16,9 @@
   padding: var(--sm-2);
   font-size: var(--md-1);
   box-shadow: var(--shadow);
-  transition: border-color 0.3s, box-shadow 0.3s;
+  transition:
+    border-color 0.3s,
+    box-shadow 0.3s;
   margin-top: var(--md-1);
   margin-bottom: var(--md-2);
   width: 320px;
@@ -52,4 +54,4 @@
 
 .ul li:hover {
   color: inherit;
-} 
+}
