--- a/src/app/components/ReferenceDrop/styles.module.css
+++ b/src/app/components/ReferenceDrop/styles.module.css
@@ -13,7 +13,10 @@
   background-repeat: no-repeat;
   background-position: right var(--md-2) center;
   background-size: 1rem;
-  transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+  transition:
+    background-color 0.3s ease,
+    color 0.3s ease,
+    border-color 0.3s ease;
   outline: none;
 }
 
