--- a/src/app/components/Skeleton/styles.module.css
+++ b/src/app/components/Skeleton/styles.module.css
@@ -17,7 +17,12 @@
   position: relative;
   overflow: hidden;
   border-radius: 8px;
-  background: linear-gradient(90deg, var(--gr-3) 25%, var(--bk-1) 50%, var(--gr-3) 75%);
+  background: linear-gradient(
+    90deg,
+    var(--gr-3) 25%,
+    var(--bk-1) 50%,
+    var(--gr-3) 75%
+  );
   background-size: 200% 100%;
   animation: loading 1.5s infinite;
   animation-delay: 0.2s;
