--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,13 +48,23 @@ body {
 }
 
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Open Sans',
+    'Helvetica Neue',
+    sans-serif;
   line-height: 1.6;
   background-color: var(--bk-3);
   color: var(--wt-3);
   display: grid;
-  grid-template-rows: calc(2* var(--lg-1)) 1fr;
+  grid-template-rows: calc(2 * var(--lg-1)) 1fr;
   overflow: hidden;
 }
 
