--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,74 +1,68 @@
-:root {
-  /* Sizes */
-  --sm-1: 0.375rem;
-  --sm-2: 0.625rem;
-  --sm-3: 0.875rem;
-  --md-1: 1rem;
-  --md-2: 1.375rem;
-  --md-3: 1.75rem;
-  --lg-1: 2.5rem;
-  --lg-2: 3.5rem;
-  --lg-3: 4.5rem;
+@import 'tailwindcss';
 
-  /* Colors */
-  /* White */
-  --wt-1: #ffffff;
-  --wt-2: #f5f5f5;
-  --wt-3: #e0e0e0;
+@theme {
+  /* Definindo variáveis CSS para as cores do tema */
 
-  /* Grey */
-  --gr-1: #bdbdbd;
-  --gr-2: #757575;
-  --gr-3: #333333;
+  /* Whites */
+  --color-wt-1: #ffffff;
+  --color-wt-2: #f5f5f5;
+  --color-wt-3: #e0e0e0;
 
-  /* Orange */
-  --or-1: #ff9800;
-  --or-2: #f57c00;
-  --or-3: #ef6c00;
+  /* Greys */
+  --color-gr-1: #bdbdbd;
+  --color-gr-2: #757575;
+  --color-gr-3: #333333;
 
-  /* Black */
-  --bk-1: #212121;
-  --bk-2: #1b1b1b;
-  --bk-3: #0d0d0d;
+  /* Oranges */
+  --color-or-1: #ff9800;
+  --color-or-2: #f57c00;
+  --color-or-3: #ef6c00;
 
-  --shadow: 0 0 10px #0000001a;
-}
+  /* Blacks */
+  --color-bk-1: #212121;
+  --color-bk-2: #1b1b1b;
+  --color-bk-3: #0d0d0d;
 
-* {
-  box-sizing: border-box;
-  border: none;
-  margin: 0;
-  padding: 0;
+  /* Scrollbar colors */
+  --scrollbar-track-bg: #121212;
+  --scrollbar-thumb-bg: #444444;
+  --scrollbar-thumb-hover-bg: #666666;
+
+  /* Office Colors */
+
+  /* blue */
+  --color-of-blue-1: #41a5ee;
+  --color-of-blue-2: #2b7cd3;
+  --color-of-blue-3: #185abd;
+  --color-of-blue-4: #134391;
+
+  /* green */
+  --color-of-green-1: #47c481;
+  --color-of-green-2: #39a063;
+  --color-of-green-3: #2d7d42;
+  --color-of-green-4: #3f7455;
 }
 
 html,
-body {
+body,
+#root {
   height: 100%;
-  width: 100%;
-}
-
-body {
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Open Sans',
-    'Helvetica Neue',
-    sans-serif;
-  line-height: 1.6;
-  background-color: var(--bk-3);
-  color: var(--wt-3);
-  display: grid;
-  grid-template-rows: calc(2 * var(--lg-1)) 1fr;
   overflow: hidden;
+  user-select: none;
 }
 
-main {
-  height: 100%;
-  width: 100%;
+.text-gradient-orange {
+  background-image: linear-gradient(
+    to right,
+    var(--color-or-3),
+    var(--color-or-1)
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
